--- a/src/components/ContentFromBoxes/contentFromBoxes.module.css
+++ b/src/components/ContentFromBoxes/contentFromBoxes.module.css
@@ -39,3 +39,10 @@
   border-radius: 5px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
+@media (max-width: 768px) {
+  .totalLiked,.totalUnliked{
+    margin: 10px;
+    font-size: x-small;
+
+  }
+}
