--- a/src/components/Title/title.module.css
+++ b/src/components/Title/title.module.css
@@ -13,3 +13,8 @@
     padding-top: 20px;
     padding-left: 15px;
   }
+  @media (max-width: 768px) {
+    .title{
+      font-size: 20px;
+    }
+  }
