Translate using i18n , update Blogs

--- a/src/components/ContentFromBoxes/contentFromBoxes.module.css
+++ b/src/components/ContentFromBoxes/contentFromBoxes.module.css
@@ -32,7 +32,7 @@
 
 .totalUnliked {
   font-weight: bold;
-  background-color: #f44336; /* Red */
+  background-color: #c82333; /* Red */
   color: white;
   padding: 15px;
   margin-bottom: 20px;
