--- a/src/components/Box/Box.module.css
+++ b/src/components/Box/Box.module.css
@@ -1,6 +1,7 @@
-
 .blog_item {
-  width: calc(31% - 40px); /* Adjust width to fit three items per line with spacing */
+  width: calc(
+    31% - 40px
+  ); /* Adjust width to fit three items per line with spacing */
   padding: 20px; /* Add padding to create space between content and border */
   margin-bottom: 20px; /* Add margin to create space between blog items */
   border-radius: 5px; /* Add rounded corners */
@@ -10,45 +11,48 @@
   margin-right: 20px; /* Add spacing between blog items */
   margin-left: 0; /* Remove left margin for the first item in each row */
 }
-  .blog_item h2 {
-    font-size: 18px; /* Adjust heading size */
-    margin-bottom: 10px; /* Add spacing between heading and description */
-  }
-  
-  .blog_item p {
-    font-size: 16px; /* Adjust paragraph size */
-    color: #333; /* Adjust text color */
-    line-height: 1.5; /* Adjust line height for readability */
-  }
- 
-  
-  .blog_item img {
-    max-width: 100%;
-    height: 220px;
-    border: 0;
-  }
-  
-  
-  .description {
-    margin-top: 20px;
-  }
-  .content .description h2 {
-    margin-block-start: 0.83em;
-    margin-block-end: 0.83em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    font-weight: bold;
-    unicode-bidi: isolate;
-  }
-  .content  .description p {
-    display: block;
-    margin-block-start: 1em;
-    margin-block-end: 1em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    unicode-bidi: isolate;
-  }
-  .likeButton,
+.blog_item h2 {
+  font-size: 18px; /* Adjust heading size */
+  margin-bottom: 10px; /* Add spacing between heading and description */
+}
+
+.blog_item p {
+  font-size: 16px; /* Adjust paragraph size */
+  color: #333; /* Adjust text color */
+  line-height: 1.5; /* Adjust line height for readability */
+}
+.row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.blog_item img {
+  max-width: 100%;
+  height: 220px;
+  border: 0;
+}
+
+.description {
+  margin-top: 20px;
+}
+.content .description h2 {
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
+  unicode-bidi: isolate;
+}
+.content .description p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  unicode-bidi: isolate;
+}
+.likeButton,
 .unlikeButton {
   /* Your existing styles for the like buttons */
   border: none;
@@ -64,32 +68,46 @@
   color: #fff;
 }
 
-
 .unlikeButton {
   background-color: #dc3545;
   color: #fff;
-}/* Box.module.css */
+} /* Box.module.css */
 
 /* Styles for the delete button */
-.deleteButton {
+.deleteButton,
+.editButton {
   background-color: #8d8585; /* Red */
   color: white;
   border: none;
-  padding: 8px 16px;
-  font-size: 16px;
+  padding: 4px 8px;
+  font-size: 13px;
   cursor: pointer;
   border-radius: 4px;
   transition: background-color 0.3s ease;
   /* margin-top: 10px; */
 }
 
-.deleteButton:hover {
-  background-color: #c82333; /* Darker shade of Red */
+
+/* Button.module.css */
+
+.viewDetailsButton {
+  padding: 5px 10px;
+  background-color: #a8a9aa;
+  border: 1px solid #a8a9aa;
+  color: #fff;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-bottom: 5px;
+}
+
+.viewDetailsButton:hover {
+  background-color: #535557;
 }
 
 /* Styles for the trash icon */
 
-.btn{
+.btn {
   display: flex;
   justify-content: space-between;
 }
@@ -101,18 +119,17 @@
     font-size: 16px; /* Adjust heading size */
     margin-bottom: 10px; /* Add spacing between heading and description */
   }
-  
+
   .blog_item p {
     font-size: 14px; /* Adjust paragraph size */
     color: #333; /* Adjust text color */
     line-height: 1; /* Adjust line height for readability */
   }
-  .likeButton,.unlikeButton{
+  .likeButton,
+  .unlikeButton {
     font-size: small;
   }
-.deleteButton{
-  font-size: xx-small;
-}
-  
-
+  .deleteButton {
+    font-size: xx-small;
+  }
 }
